src/index.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  /* color: rgba(255, 255, 255, 0.87); */
  /* background-color: #242424; */
  color: #213547;
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  /* min-width: 320px; */ /* !  -> horizontal scrolling appears on mobile */
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  /* background-color: #1a1a1a; */
  background-color: #f9f9f9;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  /* border-color: #646cff; */
  border-color: #747bff;
}
button:focus {
  /* prevent flashing click on button when reset focus -> because starts new round */
  outline: none;
}
/* button:focus, */
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

/*
****************************************************************
       Dark Theme
****************************************************************
*/
@media (prefers-color-scheme: dark) {
  :root {
    color: rgba(255, 255, 255, 0.87);
    background-color: #242424;
  }
  a:hover {
    border-color: #646cff;
  }
  button {
    background-color: #1a1a1a;
  }
}

/*
*****************************************************************
       Dark Theme (for toggle outside system preference)
*****************************************************************
*/
.dark {
  background-color: #242424;
}
.dark body * {
  color: rgba(255, 255, 255, 0.87);
}
.dark * a:hover {
  border-color: #646cff;
}
.dark * button {
  background-color: #1a1a1a;
}

